--- a/css/styles.css
+++ b/css/styles.css
@@ -8,6 +8,7 @@
   --light: rgba(244, 244, 253, 1);
   --white-background: rgba(255, 255, 255, 1);
   --hero-background: rgba(46, 47, 66, 0.7);
+  --success: rgba(49, 208, 170, 1);
 }
 
 body {
@@ -79,7 +80,7 @@ img {
   border-bottom: solid 1px var(--accent);
   display: flex;
   align-items: center;
-  justify-content: space-between;
+  /*justify-content: space-between;*/
 }
 
 .site-header .container {
@@ -89,6 +90,7 @@ img {
 .header-navigation {
   display: flex;
   align-items: center;
+  margin-right: auto;
 }
 
 .menu {
@@ -131,6 +133,7 @@ img {
 
 .address {
   font-style: normal;
+  margin-left: auto;
 }
 
 .contact {
@@ -213,31 +216,6 @@ img {
   flex-basis: calc((100% - 72px) / 4);
 }
 
-.feature::before {
-  display: block;
-  height: 112px;
-  content: '';
-  background-color: var(--light);
-}
-
-.feature::before:hover,
-.feature::before:focus {
-  background-color: ;
-}
-
-.feature::before:nth-child(1) {
-  background-image: url('../images/icons.svg#icon-antenna');
-  background-size: contain;
-}
-
-.feature::before:nth-child(2) {
-}
-
-.feature::before:nth-child(3) {
-}
-
-.feature::before:nth-child(4) {
-}
 .feature-title {
   font-weight: 500;
   font-size: 20px;
@@ -299,10 +277,6 @@ img {
   text-align: center;
 }
 
-.team-member:last-child {
-  margin-right: 0;
-}
-
 .team-member-vacation {
   font-weight: 500;
   font-size: 20px;
@@ -316,6 +290,11 @@ img {
   background-color: var(--dark);
   color: var(--light);
   padding: 100px 0;
+}
+
+.footer-content {
+  display: flex;
+  gap: 120px;
 }
 
 .footer-span {
@@ -361,6 +340,8 @@ img {
   color: var(--white-background);
   cursor: pointer;
   border: 1px solid transparent;
+  box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 2px 1px rgba(0, 0, 0, 0.08),
+    0px 2px 2px rgba(0, 0, 0, 0.12);
 }
 
 .projects {
@@ -373,6 +354,12 @@ img {
 
 .project {
   width: calc((100% - 48px) / 3);
+}
+
+.project:hover,
+.project:focus {
+  box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08), 0px 1px 1px rgba(46, 47, 66, 0.16),
+    0px 2px 1px rgba(46, 47, 66, 0.08);
 }
 
 .bordered {
@@ -424,4 +411,84 @@ img {
 .social-link-icon {
   width: 16px;
   height: 16px;
+}
+
+/*features icon*/
+.icon-background {
+  height: 112px;
+  background-color: var(--light);
+  padding: 24px 100px;
+}
+
+.feature-icon {
+  width: 64px;
+  height: 64px;
+}
+
+/*customers section*/
+.customers-title {
+  font-weight: 700;
+  font-size: 36px;
+  line-height: 1.11;
+  text-align: center;
+  letter-spacing: 0.02em;
+  text-transform: capitalize;
+  color: var(--text);
+}
+
+.customers-list {
+  display: flex;
+  gap: 24px;
+  margin-top: 72px;
+}
+
+.customers-item {
+  flex-basis: calc((100% - 120px) / 6);
+  border: solid 1px var(--subtle-text);
+  border-radius: 5px;
+  color: var(--subtle-text);
+}
+
+.customers-icon {
+  max-width: 168px;
+  height: 88px;
+  --icon-color: currentColor;
+}
+
+.customers-item:hover,
+.customers-item:focus {
+  border: solid 1px var(--pressed-state);
+  color: var(--pressed-state);
+}
+
+/*Social footer*/
+.social-text {
+  font-weight: 500;
+  font-size: 16px;
+  line-height: 1.5;
+  letter-spacing: 0.02em;
+  color: var(--white-background);
+}
+
+.social-footer {
+  display: flex;
+  gap: 16px;
+  margin-top: 16px;
+}
+
+.social-footer-link {
+  display: inline-flex;
+  background-color: var(--brand-color);
+  border-radius: 50px;
+  padding: 8px;
+}
+
+.social-footer-link:hover,
+.social-footer-link:focus {
+  background-color: var(--success);
+}
+
+.social-footer-icon {
+  width: 24px;
+  height: 24px;
 }
