--- a/css/styles.css
+++ b/css/styles.css
@@ -48,10 +48,11 @@ img {
 
 .section {
   padding: 120px 0;
+  margin: 0 auto;
 }
 
 .text-container {
-  padding: 32px 16px;
+  padding: 32px 0;
 }
 
 .visually-hidden {
@@ -78,13 +79,14 @@ img {
 
 .site-header {
   border-bottom: solid 1px var(--accent);
-  display: flex;
-  align-items: center;
+  box-shadow: 0px 2px 1px rgba(46, 47, 66, 0.08), 0px 1px 1px rgba(46, 47, 66, 0.16),
+    0px 1px 6px rgba(46, 47, 66, 0.08);
   /*justify-content: space-between;*/
 }
 
-.site-header .container {
-  border-bottom: none;
+.site-header > .container {
+  display: flex;
+  align-items: center;
 }
 
 .header-navigation {
@@ -164,8 +166,9 @@ img {
 
 .order {
   background-color: var(--dark);
-  background-image: linear-gradient(to right, var(--hero-background), var(--hero-background)),
+  background-image: linear-gradient(var(--hero-background), var(--hero-background)),
     url('../images/people-office.jpg');
+  max-width: 1440px;
   background-repeat: no-repeat;
   background-position: center;
   background-size: cover;
@@ -274,6 +277,8 @@ img {
   flex-basis: calc((100% - 72px) / 4);
   background-color: var(--white-background);
   border-radius: 0px 0px 4px 4px;
+  box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08), 0px 1px 1px rgba(46, 47, 66, 0.16),
+    0px 2px 1px rgba(46, 47, 66, 0.08);
   text-align: center;
 }
 
@@ -294,6 +299,7 @@ img {
 
 .footer-content {
   display: flex;
+  align-items: baseline;
   gap: 120px;
 }
 
@@ -356,8 +362,12 @@ img {
   width: calc((100% - 48px) / 3);
 }
 
-.project:hover,
-.project:focus {
+.project-active {
+  display: block;
+}
+
+.project-active:hover,
+.project-active:focus {
   box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08), 0px 1px 1px rgba(46, 47, 66, 0.16),
     0px 2px 1px rgba(46, 47, 66, 0.08);
 }
@@ -365,6 +375,7 @@ img {
 .bordered {
   border: 1px solid var(--accent);
   border-top: none;
+  padding-left: 16px;
 }
 
 .project-title {
@@ -395,9 +406,10 @@ img {
 }
 
 .team-member-social-link {
-  display: inline-flex;
+  display: flex;
+  align-items: center;
+  justify-content: center;
   background-color: var(--brand-color);
-  padding: 12px;
   border-radius: 50%;
   width: 40px;
   height: 40px;
@@ -409,55 +421,60 @@ img {
 }
 
 .social-link-icon {
-  width: 16px;
-  height: 16px;
+  fill: var(--light);
 }
 
 /*features icon*/
 .icon-background {
+  display: flex;
+  align-items: center;
+  justify-content: center;
   height: 112px;
   background-color: var(--light);
-  padding: 24px 100px;
-}
-
-.feature-icon {
-  width: 64px;
-  height: 64px;
+  border-radius: 4px;
+  margin-bottom: 8px;
 }
 
 /*customers section*/
 .customers-title {
   font-weight: 700;
   font-size: 36px;
-  line-height: 1.11;
+  line-height: 1.1;
   text-align: center;
   letter-spacing: 0.02em;
   text-transform: capitalize;
-  color: var(--text);
+  color: var(--dark);
+  margin-bottom: 72px;
 }
 
 .customers-list {
   display: flex;
   gap: 24px;
-  margin-top: 72px;
 }
 
 .customers-item {
   flex-basis: calc((100% - 120px) / 6);
+  height: 88px;
+}
+
+.customers-link {
+  display: flex;
+  width: 100%;
+  height: 100%;
   border: solid 1px var(--subtle-text);
   border-radius: 5px;
+  align-items: center;
+  justify-content: center;
   color: var(--subtle-text);
 }
 
 .customers-icon {
-  max-width: 168px;
-  height: 88px;
-  --icon-color: currentColor;
+  fill: currentColor;
 }
 
-.customers-item:hover,
-.customers-item:focus {
-  border: solid 1px var(--pressed-state);
+.customers-link:hover,
+.customers-link:focus {
+  border-color: var(--pressed-state);
   color: var(--pressed-state);
 }
 
@@ -468,19 +485,27 @@ img {
   line-height: 1.5;
   letter-spacing: 0.02em;
   color: var(--white-background);
+  margin-bottom: 16px;
 }
 
 .social-footer {
   display: flex;
   gap: 16px;
-  margin-top: 16px;
+}
+
+.social-footer-item {
+  width: 40px;
+  height: 40px;
 }
 
 .social-footer-link {
-  display: inline-flex;
+  display: flex;
+  width: 100%;
+  height: 100%;
   background-color: var(--brand-color);
-  border-radius: 50px;
-  padding: 8px;
+  border-radius: 50%;
+  align-items: center;
+  justify-content: center;
 }
 
 .social-footer-link:hover,
@@ -489,6 +514,5 @@ img {
 }
 
 .social-footer-icon {
-  width: 24px;
-  height: 24px;
+  fill: var(--light);
 }
