--- a/css/styles.css
+++ b/css/styles.css
@@ -300,7 +300,10 @@ img {
 .footer-content {
   display: flex;
   align-items: baseline;
-  gap: 120px;
+}
+
+.logo-container {
+  margin-right: 120px;
 }
 
 .footer-span {
@@ -310,10 +313,6 @@ img {
 .footer {
   display: inline-block;
   margin-bottom: 16px;
-}
-
-.footer-text {
-  max-width: 264px;
 }
 
 /*Style for page Portfolio*/
@@ -462,7 +461,7 @@ img {
   width: 100%;
   height: 100%;
   border: solid 1px var(--subtle-text);
-  border-radius: 5px;
+  border-radius: 4px;
   align-items: center;
   justify-content: center;
   color: var(--subtle-text);
